--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
     "db:init": "sequelize init",
+    "db:migrate": "sequelize-cli db:migrate",
     "db:reset": "node src/scripts/reset-db.js",
     "db:reset:keep-settings": "node src/scripts/reset-db.js --keep-settings"
   },
